--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'auth_base.html' %}
 {% block title %}SIIAPEC – Iniciar Sesión{% endblock %}
 
 {% block styles %}
 {{ super() }}
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login-register.css') }}?v=1.34">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login-register.css') }}?v={{ static_version }}">
 {% endblock %}
 
 {% block scripts %}
@@ -19,7 +19,7 @@
   <div class="banner-content">
     <span class="banner-text">Bienvenido al Sistema Integral de Información para Administración y Permanencia de Posgrado</span>
   </div>
-</div>
+</div> 
 
 <div class="auth-container">
   <div class="auth-bg">
