--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'auth_base.html' %}
 {% block title %}SIIAPEC – Registro de Usuario{% endblock %}
 {% block styles %}
 {{ super() }}
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login-register.css') }}?v=1.34">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login-register.css') }}?v={{static_version}}">
 {% endblock %}
 <!-- Sobrescritura de la barra de navegación para que no aparezca-->
 {% block navbar %}{%endblock%}
@@ -65,14 +65,6 @@
             <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
           </div>
         </div>
-
-        <div class="form-check mb-4">
-          <input class="form-check-input" type="checkbox" id="is_internal" name="is_internal">
-          <label class="form-check-label" for="is_internal">
-            Soy estudiante interno
-          </label>
-        </div>
-
         <button class="btn btn-success w-100">Registrarme</button>
       </form>
 
