--- a/app/templates/programs/admission/admission_dashboard.html
+++ b/app/templates/programs/admission/admission_dashboard.html
@@ -4,7 +4,7 @@
 
 {% block styles %}
 {{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/program/admission.css') }}?v=1.1">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/program/admission.css') }}?v={{ static_version }}">
 {% endblock %}
 
 {% block content %}
@@ -91,7 +91,7 @@
 
 {% block scripts %}
 {{ super() }}
-<script src="{{ url_for('static', filename='js/program/admission.js') }}?v=1.2"></script>
+<script src="{{ url_for('static', filename='js/program/admission.js') }}?v={{ static_version }}"></script>
 
 
 {% endblock %}
