--- a/app/templates/programs/view/view.html
+++ b/app/templates/programs/view/view.html
@@ -7,7 +7,7 @@
 {% block styles %}
 {{ super() }}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" data-swup-include-style>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/program/view.css') }}?v=1.175" data-swup-include-style>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/program/view.css') }}?v={{ static_version }}" data-swup-include-style>
 {% endblock %}
 
 {% block content %}
@@ -71,5 +71,5 @@
 {% block scripts %}
 {{ super() }}
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="{{ url_for('static', filename='js/program/view.js') }}?v=1.1791"></script>
+<script src="{{ url_for('static', filename='js/program/view.js') }}?v={{ static_version }}"></script>
 {% endblock %}
