--- a/app/templates/user/profile/profile.html
+++ b/app/templates/user/profile/profile.html
@@ -4,7 +4,7 @@
 
 {% block styles %}
 {{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/user/profile.css') }}?v=1.1">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/user/profile.css') }}?v={{ static_version }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 {% endblock %}
 
@@ -208,5 +208,5 @@
 
 {% block scripts %}
 {{ super() }}
-<script src="{{ url_for('static', filename='js/user/profile.js') }}"></script>
+<script src="{{ url_for('static', filename='js/user/profile.js') }}?v={{ static_version }}"></script>
 {% endblock %}
