--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -12,6 +12,7 @@
   <link href="{{ url_for('static', filename='css/session.css') }}?v={{ static_version }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/base.css') }}?v={{ static_version }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/auth/login-register.css') }}?v={{ static_version }}" rel="stylesheet">
+  <meta name="csrf-token" content="{{ csrf_token() }}">
   {% block styles %}{% endblock %}
 </head>
 <body class="d-flex flex-column" style="min-height:100svh; overflow-x:hidden;">
