--- a/app/templates/programs/view/view.html
+++ b/app/templates/programs/view/view.html
@@ -43,20 +43,20 @@
 
                     <div class="modal-header">
                         <h5 class="modal-title" id="enrollmentModalLabel">
-                            ¿Deseas inscribirte en el programa?
+                            ¿Deseas postularte en el programa?
                         </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
 
                     <div class="modal-body">
-                        Por favor confirma si deseas proceder con la inscripción al programa {{ program.name }}.
+                        Por favor confirma si deseas proceder con la postulación al programa {{ program.name }}.
                     </div>
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
 
                         <button type="submit" class="btn btn-primary">
-                            Sí, inscribirme
+                            Sí, postularme
                         </button>
                     </div>
                 </form>
