--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -69,7 +69,7 @@
       </form>
 
       <div class="mt-3 text-center">
-        ¿Ya tienes cuenta? <a href="{{ url_for('api_auth.api_login') }}" data-no-swup>Inicia Sesión</a>
+        ¿Ya tienes cuenta? <a href="{{ url_for('pages_auth.login_page') }}" data-no-swup>Inicia Sesión</a>
       </div>
     </div>
   </div>
