--- a/app/templates/programs/view/_floating_buttons.html
+++ b/app/templates/programs/view/_floating_buttons.html
@@ -13,6 +13,6 @@
       class="btn btn-primary btn-inscription"
       data-bs-toggle="modal"
       data-bs-target="#enrollmentModal">
-    <i class="fas fa-graduation-cap me-2"></i>Inscribirme
+    <i class="fas fa-graduation-cap me-2"></i>Postularme
   </button>
 </div>
