--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,5 @@
 {% extends 'auth_base.html' %}
-{% block title %}SIIAPEC – Iniciar Sesión{% endblock %}
+{% block title %}SIIAP – Iniciar Sesión{% endblock %}
 
 {% block styles %}
 {{ super() }}
