--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,5 +1,5 @@
 {% extends 'auth_base.html' %}
-{% block title %}SIIAPEC – Registro de Usuario{% endblock %}
+{% block title %}SIIAP – Registro de Usuario{% endblock %}
 {% block styles %}
 {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login-register.css') }}?v={{static_version}}">
