--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="csrf-token" content="{{ csrf_token() }}">
 
-  <title>{% block title %}SIIAPEC{% endblock %}</title>
+  <title>{% block title %}SIIAP{% endblock %}</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -62,9 +62,9 @@
             class="img-fluid header-logo tall">
         </div>
 
-        <!-- SIIAPEC centrado -->
+        <!-- SIIAP centrado -->
         <div class="brand-badge mx-auto">
-          <span class="brand-text">SIIAPEC</span>
+          <span class="brand-text">SIIAP</span>
         </div>
 
         <!-- Logos derecha -->
@@ -210,7 +210,7 @@
   <!-- FOOTER -->
   <footer class="bg-dark text-white py-2 mt-auto">
     <div class="container text-center">
-      <small>&copy; 2025 SIIAPEC. Todos los derechos reservados.</small>
+      <small>&copy; 2025 SIIAP. Todos los derechos reservados.</small>
     </div>
   </footer>
 
