--- a/app/templates/programs/admission/admission_dashboard.html
+++ b/app/templates/programs/admission/admission_dashboard.html
@@ -107,6 +107,7 @@
     </form>
   </div>
 </div>
+
 <!-- Modal para solicitar prórroga -->
 <div class="modal fade" id="extensionModal" tabindex="-1" aria-labelledby="extensionLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -117,7 +118,7 @@
       </div>
       <form id="extensionForm">
         <div class="modal-body">
-          <input type="hidden" id="extensionSubmissionId">
+          <input type="hidden" id="extensionArchiveId">
           
           <div class="alert alert-info">
             <i class="fas fa-info-circle me-2"></i>
